Assignment-2/test/input/neg/Simple.java
class Simple{
    public static void main(String[] a){
        System.out.println(new Fac().ComputeFac(10));
    }
}

class Fac {
    public int ComputeFac(int num){
        int num_aux;
        int uninit;

        num_aux = uninit;
        return num_aux ;
    }
}